@@ -1,3 +1,8 @@
+Mon Aug 19 17:51:35 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-keybinding-properties.c (metacity_key_list): fix bindings
+	to match metacity.
+
 2002-08-15  Jody Goldberg <jody@gnome.org>
 
 	* gnome-keybinding-properties.c : Add a pile of missing metacity
